[tool.poetry]
name = "pyebus"
version = "1.5.0"
description = "Pythonic Interface to EBUS Daemon (ebusd)"
authors = [
  "c0fec0de <c0fec0de@gmail.com>"
]
readme = "README.rst"

license = "MIT"

homepage = "https://github.com/c0fec0de/pyebus"
repository = "https://github.com/c0fec0de/pyebus"

keywords = [
  'EBUSD',
  'EBUS',
  'Dungs',
  'FH Ostfalia',
  'TEM',
  'Lamberti',
  'CEB',
  'Landis-Staefa',
  'FERRO',
  'MONDIAL',
  'Wikon',
  'Wolf',
  'RAWE',
  'Satronic',
  'ENCON',
  'Kromschröder',
  'Eberle',
  'EBV',
  'Grässlin',
  'ebm-papst',
  'SIG',
  'Theben',
  'Thermowatt',
  'Vaillant',
  'Toby',
  'Weishaupt',
  'ebusd.eu',
  'Heating'
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.8",
]


[tool.poetry.scripts]
ebt = "pyebus.cli:main"
ebustool = "pyebus.cli:main"

[tool.poetry.dependencies]
python = ">= 3.8, < 4"
anytree = "^2.8.0"

[tool.poetry.group.test.dependencies]
black = "^23.10.1"
coverage = "^7.3.2"
isort = "^5.12.0"
pylint = "^3.0.2"
pytest = "^7.4.3"
pyyaml = "^6.0.1"

[tool.poetry.group.doc.dependencies]
sphinx = '^5.1.1'
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.doctest]
doctest-module = true

[tool.coverage.run]
branch = true
omit = [".tox/*", "tests/*", ".cache/*", "pyebus/cli/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "return NotImplemented",
    "raise NotImplementedError",
    "if __name__ == __main__:",
]

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = [
    'duplicate-code',
    'fixme',
    'too-many-arguments',
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py,py-min
isolated_build = True

[tox:.package]
basepython = python3

[testenv:py]
allowlist_externals = *
commands =
    poetry install --with=test --with=doc
    poetry run black .
    poetry run isort .
    poetry run coverage run --source=pyebus --branch -m pytest --doctest-glob=docs/*.rst --doctest-modules --ignore-glob=tests/testdata* --ignore=docs/conf.py --log-level=DEBUG -vv --junitxml=report.xml
    poetry run coverage report
    poetry run coverage html
    poetry run coverage xml
    poetry run pylint pyebus tests
    poetry run make html -C docs
    poetry run make api -C docs
    poetry run make html -C docs

[testenv:py-min]
allowlist_externals = *
commands =
    poetry install --without=test --without=doc
    poetry run python -c 'import pyebus'
    poetry run ebt --version
    poetry run python -m pyebus --version
"""
